# streamline_svc

./: .gitignore  .gitmodules  README.md  pyproject.toml  start.py  start_vocals.bat
backend/: api.py  api_process_manager.py  audio_processor.py  models.py  proxy.py  rvc_runner.py  rvc_script.py  transcriber.py
frontend/: index.html
frontend/css/: tokens.css  vite-theme.css  vocals.css
frontend/js/: api.js  app.js  audio-upload.js  player.js  slider.js
patches/: launch_api_server.py  lora_slot_core.py  lora_slot_methods.py  lora_slot_patch.py  lora_slot_routes.py  mlx_optimizations.py
